// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button component > snapshot test of Component story 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-neutral-50 hover:bg-primary-600/90 h-[40px] px-4 py-3"
  >
    Click me
  </button>
</div>
`;

exports[`Button component > snapshot test of Variants story 1`] = `
<div>
  <div
    class="flex gap-4"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-neutral-50 hover:bg-primary-600/90 h-[40px] px-4 py-3"
    >
      Click me
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-600 text-neutral-0 hover:bg-secondary-600/90 focus-visible:ring-secondary-600 h-[40px] px-4 py-3"
    >
      Click me
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-primary-600 bg-neutral-0 text-primary-600 hover:bg-primary-100/30 h-[40px] px-4 py-3"
    >
      Click me
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-secondary-600 bg-neutral-0 text-secondary-600 hover:bg-secondary-100/30 focus-visible:ring-secondary-600 h-[40px] px-4 py-3"
    >
      Click me
    </button>
  </div>
</div>
`;
